# tiny_pretty

./: Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
src/: doc.rs  lib.rs  options.rs  print.rs
