[package]
name = "tiny_pretty"
version = "0.1.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Tiny implementation of Wadler-style pretty printer."
repository = "https://github.com/g-plane/tiny_pretty"
license = "MIT"
resolver = "2"

[dependencies]
unicode-width = { version = "0.1", optional = true }

[dev-dependencies]
itertools = "0.11"

[features]
unicode-width = ["dep:unicode-width"]
